# crane-rs

./: .gitignore  .prettierrc.yml  CHANGELOG.md  Cargo.toml  README.md  flake.nix
scripts/: README.md  install.sh  uninstall.sh
src/: cli.rs  main.rs  middleware.rs  routes.rs  templates.rs  types.rs
src/routes/: authentication.rs  download.rs  index.rs  login.rs  upload.rs  upload_files.rs
src/templates/: download.rs  index.rs  login.rs  upload.rs
src/utils/: store.rs  types.rs
static/: global.css
static/styles/: download.css  style-download.css  style-upload.css  style.css
templates/: download.html  index.html  login.html  upload.html
