[package]
name = "crane-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-multipart = { version = "0.7.2", features = ["derive"] }
actix-web = "4.11.0"
askama = "0.14.0"
clap = { version = "4.5.49", features = ["derive"] }
local-ip-address = "0.6.5"
qr2term = "0.3.3"
webbrowser = "1.0.6"
