[package]
name = "crane-rs"
version = "0.1.0"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com> "]
description = "A simple file sharing server written in Rust using Actix-web framework."
license = "MIT"
repository = "https://github.com/santoshxshrestha/crane-rs"
homepage = "https://github.com/santoshxshrestha/crane-rs"
documentation = "https://github.com/santoshxshrestha/crane-rs#readme"
readme = "README.md"

[dependencies]
actix-files = "0.6.8"
actix-multipart = { version = "0.7.2", features = ["derive"] }
actix-web = "4.11.0"
askama = "0.14.0"
clap = { version = "4.5.49", features = ["derive"] }
local-ip-address = "0.6.5"
qr2term = "0.3.3"
walkdir = "2.5.0"
webbrowser = "1.0.6"
